--- a/src/gitulyse/package.json
+++ b/src/gitulyse/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^7.4.1",
+    "@mantine/form": "^7.4.1",
+    "@mantine/hooks": "^7.4.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "node": "^21.2.0",
@@ -19,7 +22,9 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
+    "postcss": "^8.4.33",
+    "postcss-preset-mantine": "^1.12.3",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.0"
   }
 }
