--- a/src/gitulyse/package.json
+++ b/src/gitulyse/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^7.4.1",
     "@mantine/form": "^7.4.1",
     "@mantine/hooks": "^7.4.1",
+    "dotenv": "^16.3.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "node": "^21.2.0",
