--- a/src/gitulyse/package.json
+++ b/src/gitulyse/package.json
@@ -22,9 +22,11 @@
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.33",
     "postcss-preset-mantine": "^1.12.3",
     "postcss-simple-vars": "^7.0.1",
+    "prettier": "3.1.1",
     "tailwindcss": "^3.4.0"
   }
 }
