--- a/src/gitulyse/.env.example
+++ b/src/gitulyse/.env.example
@@ -4,4 +4,4 @@ NEXTAUTH_URL="http://localhost:3000"
 GITHUB_CLIENT_ID=""
 GITHUB_CLIENT_SECRET=""
 
-BACKEND_URL="http://localhost:5000" # without a slash at the end
+NEXT_PUBLIC_BACKEND_URL="http://localhost:5000" # without a slash at the end
