Add vscode auto-organize imports on save

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "eslint.options": {
         "overrideConfigFile": "./src/gitulyse/vscode.eslintrc.json"
-    }
+    },
+    "editor.codeActionsOnSave": {
+        "source.organizeImports": true
+    },
 }
