--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -1,3 +1,4 @@
+black==24.1.1
 blinker==1.7.0
 certifi==2023.11.17
 cffi==1.16.0
@@ -12,6 +13,10 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.12.1
+platformdirs==4.1.0
 pycparser==2.21
 PyGithub==2.1.1
 PyJWT==2.8.0
