--- a/src/gitulyse/package.json
+++ b/src/gitulyse/package.json
@@ -14,7 +14,7 @@
     "@mantine/form": "^7.4.1",
     "@mantine/hooks": "^7.5.0",
     "dotenv": "^16.3.1",
-    "next": "14.0.4",
+    "next": "^14.1.1-canary.22",
     "next-auth": "^4.24.5",
     "node": "^21.2.0",
     "react": "^18",
