--- a/src/gitulyse/package.json
+++ b/src/gitulyse/package.json
@@ -31,6 +31,7 @@
     "postcss-preset-mantine": "^1.12.3",
     "postcss-simple-vars": "^7.0.1",
     "prettier": "3.1.1",
+    "react-fast-marquee": "^1.6.4",
     "tailwindcss": "^3.4.0"
   }
 }
