--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -7,6 +7,7 @@ click==8.1.7
 colorama==0.4.6
 cryptography==42.0.1
 Deprecated==1.2.14
+dnspython==2.6.1
 Flask==3.0.1
 Flask-Cors==4.0.0
 idna==3.6
@@ -20,6 +21,7 @@ platformdirs==4.1.0
 pycparser==2.21
 PyGithub==2.1.1
 PyJWT==2.8.0
+pymongo==4.6.2
 PyNaCl==1.5.0
 python-dateutil==2.8.2
 python-dotenv==1.0.0
