--- a/src/compose.yaml
+++ b/src/compose.yaml
@@ -8,6 +8,8 @@ services:
             - MONGO_INITDB_ROOT_PASSWORD=pass
         ports:
             - 27017:27017
+        volumes:
+            - ./db/data:/data/db
 
     backend:
         build: ./backend
