--- a/src/gitulyse/package.json
+++ b/src/gitulyse/package.json
@@ -13,6 +13,8 @@
     "@mantine/core": "^7.5.0",
     "@mantine/form": "^7.4.1",
     "@mantine/hooks": "^7.5.0",
+    "@nivo/calendar": "^0.85.1",
+    "@nivo/core": "^0.85.1",
     "dotenv": "^16.3.1",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
