Update naming in compose.yaml

--- a/src/compose.yaml
+++ b/src/compose.yaml
@@ -1,35 +1,40 @@
 version: "3.8"
 
+name: gitulyse
+
 services:
-    database:
-        image: mongodb/mongodb-community-server:7.0.5-ubi8
-        environment:
-            - MONGODB_INITDB_ROOT_USERNAME=user
-            - MONGODB_INITDB_ROOT_PASSWORD=pass
-        ports:
-            - 27017:27017
-        volumes:
-            - ./db/data:/data/db
+  database:
+    container_name: gitulyse-db
+    image: mongodb/mongodb-community-server:7.0.5-ubi8
+    environment:
+      - MONGODB_INITDB_ROOT_USERNAME=user
+      - MONGODB_INITDB_ROOT_PASSWORD=pass
+    ports:
+      - 27017:27017
+    volumes:
+      - ./db/data:/data/db
 
-    backend:
-        build: ./backend
-        ports:
-            - 5000:5000
-        depends_on:
-            - database
-        environment:
-            FLASK_DEBUG: "true"
-        volumes:
-            - ./backend:/app
+  backend:
+    container_name: gitulyse-api
+    build: ./backend
+    ports:
+      - 5000:5000
+    depends_on:
+      - database
+    environment:
+      FLASK_DEBUG: "true"
+    volumes:
+      - ./backend:/app
 
-    frontend:
-        build: ./gitulyse
-        ports:
-            - 3000:3000
-        environment:
-            - WATCHPACK_POLLING=true
-        depends_on:
-            - backend
-        volumes:
-            - ./gitulyse:/app
-            - /app/node_modules
+  frontend:
+    container_name: gitulyse-web
+    build: ./gitulyse
+    ports:
+      - 3000:3000
+    environment:
+      - WATCHPACK_POLLING=true
+    depends_on:
+      - backend
+    volumes:
+      - ./gitulyse:/app
+      - /app/node_modules
