--- a/src/gitulyse/package.json
+++ b/src/gitulyse/package.json
@@ -20,6 +20,8 @@
     "next-auth": "^4.24.5",
     "node": "^21.2.0",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
     "recharts": "^2.11.0"
