--- a/src/backend/requirements.txt
+++ b/src/backend/requirements.txt
@@ -5,6 +5,7 @@ cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+coverage==7.4.4
 cryptography==42.0.1
 Deprecated==1.2.14
 dnspython==2.6.1
@@ -14,6 +15,7 @@ idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.4
+mongomock==4.1.2
 mypy-extensions==1.0.0
 packaging==23.2
 pathspec==0.12.1
@@ -23,6 +25,7 @@ PyGithub==2.1.1
 PyJWT==2.8.0
 pymongo==4.6.2
 PyNaCl==1.5.0
+pytest==8.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 requests==2.31.0
@@ -31,3 +34,4 @@ typing_extensions==4.9.0
 urllib3==2.1.0
 Werkzeug==3.0.1
 wrapt==1.16.0
+pytest-mock==3.14.0
