--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 stages:
+  - lint
   - test
   - build
   - deploy
@@ -12,7 +13,7 @@ default:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
 
 frontend-lint:
-  stage: test
+  stage: lint
   extends: .standard-rules
   before_script:
     - echo "Installing dependencies..."
