--- a/src/gitulyse/.eslintrc.json
+++ b/src/gitulyse/.eslintrc.json
@@ -1,3 +1,16 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"]
+  "extends": [
+    "next/core-web-vitals",
+    "prettier"
+  ],
+  "overrides": [
+    {
+      "files": [
+        "__tests__/**/*"
+      ],
+      "env": {
+        "jest": true
+      }
+    }
+  ]
 }
